--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -106,6 +106,11 @@ jobs:
           podman system reset --force
           mkdir -p $HOME/.local/share/containers/storage/tmp
 
+          # configure for rootless KinD
+          # https://kind.sigs.k8s.io/docs/user/rootless/
+          sudo cp ci/cached-builds/delegate.conf /etc/systemd/system/user@.service.d/delegate.conf
+          sudo systemctl daemon-reload
+
           # start systemd user service
           # since `brew services start podman` is buggy, let's do our own brew-compatible service
           mkdir -p "${HOME}/.config/systemd/user/"
@@ -148,7 +153,7 @@ jobs:
           install_only: true
 
       - name: "Create cluster with podman"
-        run: sudo kind create cluster --config=ci/cached-builds/kind.yaml
+        run: kind create cluster --config=ci/cached-builds/kind.yaml
         env:
           KIND_EXPERIMENTAL_PROVIDER: podman
       #
