--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -156,7 +156,7 @@ jobs:
       - name: "Create cluster with podman"
         run: kind create cluster --config=ci/cached-builds/kind.yaml
         env:
-          KIND_EXPERIMENTAL_PROVIDER: podman
+#          KIND_EXPERIMENTAL_PROVIDER: podman
       #
       #      - name: "pull_request|schedule: resolve target if Trivy scan should run"
 #        id: resolve-target
