--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -155,6 +155,11 @@ jobs:
 
       - name: "Create cluster with podman"
         run: kind create cluster --config=ci/cached-builds/kind.yaml
+
+      - name: "Check that we got the images we expect in KinD"
+        run: docker exec kind-control-plane crictl images
+
+
 #        env:
 #          KIND_EXPERIMENTAL_PROVIDER: podman
       #
