--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -89,6 +89,8 @@ jobs:
       # https://cri-o.io/
       - name: Install cri-o
         run: |
+          set -Eeuxo pipefail
+          
           sudo apt-get update
           sudo apt-get install -y software-properties-common curl
           
