--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -90,22 +90,22 @@ jobs:
       - name: Install cri-o
         run: |
           set -Eeuxo pipefail
-          
+
           sudo apt-get update
           sudo apt-get install -y software-properties-common curl
-          
+
           curl -fsSL https://pkgs.k8s.io/core:/stable:/$KUBERNETES_VERSION/deb/Release.key | \
-            sudo gpg --dearmor --no-tty -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-          
+            gpg --dearmor --batch --yes -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+
           echo "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/$KUBERNETES_VERSION/deb/ /" | \
             sudo tee /etc/apt/sources.list.d/kubernetes.list
-          
+
           curl -fsSL https://pkgs.k8s.io/addons:/cri-o:/stable:/$CRIO_VERSION/deb/Release.key | \
-            sudo gpg --dearmor --no-tty -o /etc/apt/keyrings/cri-o-apt-keyring.gpg
-  
+            sudo gpg --dearmor --batch --yes -o /etc/apt/keyrings/cri-o-apt-keyring.gpg
+
           echo "deb [signed-by=/etc/apt/keyrings/cri-o-apt-keyring.gpg] https://pkgs.k8s.io/addons:/cri-o:/stable:/$CRIO_VERSION/deb/ /" | \
             sudo tee /etc/apt/sources.list.d/cri-o.list
-          
+
           sudo apt-get update
           sudo apt-get install -y cri-o kubelet kubeadm kubectl
           
