--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -117,7 +117,7 @@ jobs:
           sudo modprobe br_netfilter
           sudo sysctl -w net.ipv4.ip_forward=1
           
-          sudo kubeadm init
+          sudo kubeadm init --cri-socket=/var/run/crio/crio.sock
         env:
           CRIO_VERSION: v1.30
           KUBERNETES_VERSION: v1.30
