--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -118,9 +118,22 @@ jobs:
           sudo sysctl -w net.ipv4.ip_forward=1
           
           sudo kubeadm init --cri-socket=/var/run/crio/crio.sock
+          
+          mkdir -p $HOME/.kube
+          sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+          sudo chown $(id -u):$(id -g) $HOME/.kube/config
         env:
           CRIO_VERSION: v1.30
           KUBERNETES_VERSION: v1.30
+
+      - name: Install pod network
+        run: kubectl apply -f https://github.com/flannel-io/flannel/releases/$FLANNEL_VERSION/download/kube-flannel.yml
+        env:
+          FLANNEL_VERSION: v0.26.1
+
+      - name: Want for pods to be running
+        run: |
+          kubectl wait pods --all-namespaces --for=condition=Ready --timeout=100s
 
       - name: Install k3s
         run: |
