--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -174,7 +174,12 @@ jobs:
           sudo cp ci/cached-builds/crio.conf /etc/crio/crio.conf.d/
           
           sudo systemctl start crio.service
+        env:
+          CRIO_VERSION: v1.30
+          KUBERNETES_VERSION: v1.30
 
+      - name: Install Kubernetes cluster
+        run: |
           sudo swapoff -a
           sudo modprobe br_netfilter
           sudo sysctl -w net.ipv4.ip_forward=1
@@ -185,11 +190,8 @@ jobs:
           mkdir -p $HOME/.kube
           sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
           sudo chown $(id -u):$(id -g) $HOME/.kube/config
-        env:
-          CRIO_VERSION: v1.30
-          KUBERNETES_VERSION: v1.30
 
-      - name: Untaint
+      - name: Untaint the master
         run: kubectl taint nodes --all node-role.kubernetes.io/control-plane-
 
       - name: Install pod network
@@ -197,14 +199,17 @@ jobs:
         env:
           FLANNEL_VERSION: v0.26.1
 
-      - name: Want for pods to be running
+      - name: Wait for pods to be running
         run: |
           kubectl wait pods --all --all-namespaces --for=condition=Ready --timeout=300s
 
       - name: "Show crio images information"
         run: sudo crictl images
-          
 
+      - name: "Run image tests"
+        run: python3 ci/cached-builds/make_test.py --target ${{ inputs.target }}
+        env:
+          IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
 
 #        env:
 #          KIND_EXPERIMENTAL_PROVIDER: podman
