--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -150,7 +150,7 @@ jobs:
 
       - name: "Check if we have tests or not"
         id: have-tests
-        run: ci/cached-builds/has_tests.py --target ${{ inputs.target }}"
+        run: "ci/cached-builds/has_tests.py --target ${{ inputs.target }}"
 
       # https://cri-o.io/
       - name: Install cri-o
