putrunroot on volume?

--- a/ci/cached-builds/crio.conf
+++ b/ci/cached-builds/crio.conf
@@ -3,3 +3,4 @@
 [crio]
 # reuse podman's container storage because we have huge images that don't fit on disk twice
 root = "/home/runner/.local/share/containers/storage"
+runroot = "home/runner/.local/share/containers/runstorage"
