--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -191,7 +191,7 @@ jobs:
           sudo sysctl -w net.ipv4.ip_forward=1
           
           # https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm
-          sudo kubeadm init --cri-socket=/var/run/crio/crio.sock
+          sudo kubeadm init --config=ci/cached-builds/kubeadm.conf
           
           mkdir -p $HOME/.kube
           sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
