add crio debug step

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -204,7 +204,7 @@ jobs:
         run: |
           set -Eeuxo pipefail
 
-          sudo systemctl status kubelet
+          sudo systemctl status kubelet || true
           sudo journalctl -xeu kubelet
           
           # Here is one example how you may list all running Kubernetes containers by using crictl:
