fix rootdir flag

--- a/ci/cached-builds/kubeadm.yaml
+++ b/ci/cached-builds/kubeadm.yaml
@@ -14,7 +14,7 @@ localAPIEndpoint:
   bindPort: 6443
 nodeRegistration:
   kubeletExtraArgs:
-    --root-dir: "/home/runner/.local/share/containers/kubelet-root-dir"
+    root-dir: "/home/runner/.local/share/containers/kubelet-root-dir"
   criSocket: unix:///var/run/crio/crio.sock
   imagePullPolicy: IfNotPresent
   name: node
