--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -227,10 +227,11 @@ jobs:
         run: |
           kubectl wait pods --all --all-namespaces --for=condition=Ready --timeout=300s
 
-      - name: Show nodes status
+      - name: Show nodes status and wait for readiness
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: |
           kubectl describe nodes
+          kubectl wait --for=condition=Ready nodes --all --timeout=100s || kubectl describe nodes && false
 
       - name: "Show crio images information"
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
