--- a/ci/cached-builds/kubeadm.yaml
+++ b/ci/cached-builds/kubeadm.yaml
@@ -1,5 +1,8 @@
 # kubeadm config print init-defaults > kubeadm.yaml
 # kubeadm init --cri-socket=/var/run/crio/crio.sock
+
+# https://kubernetes.io/docs/reference/config-api/kubeadm-config.v1beta3/
+# https://kubernetes.io/docs/reference/config-api/kubeadm-config.v1beta4/
 apiVersion: kubeadm.k8s.io/v1beta3
 bootstrapTokens:
 - groups:
@@ -37,7 +40,7 @@ imageRepository: registry.k8s.io
 kind: ClusterConfiguration
 networking:
   dnsDomain: cluster.local
-  # this matches the default in the flannel yaml
+  # this matches the default in the flannel yaml (--pod-network-cidr=10.244.0.0/16)
   podSubnet: 10.244.0.0/16
   serviceSubnet: 10.96.0.0/12
 scheduler: {}
