--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -126,7 +126,7 @@ jobs:
         id: calculated_vars
         run: |
           SANITIZED_REF_NAME=$(echo "${{ github.ref_name }}" | sed 's/[^a-zA-Z0-9._-]/_/g')
-          export IMAGE_TAG="${SANITIZED_REF_NAME}_${{ github.sha }}"
+          IMAGE_TAG="${SANITIZED_REF_NAME}_${{ github.sha }}"
           
           echo "IMAGE_TAG=${IMAGE_TAG}" >> "$GITHUB_OUTPUT"
 
