wait for kyverno and print logs

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -246,7 +246,15 @@ jobs:
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: |
           kubectl create -f https://github.com/kyverno/kyverno/releases/download/v1.11.1/install.yaml
+          kubectl wait deployment --all --namespace kyverno --for=condition=Available --timeout=100s
           kubectl create -f ci/cached-builds/kyverno.yaml
+
+      - name: Show debug data (on failure)
+        if: ${{ failure() }}
+        run: |
+          set -Eeuxo pipefail
+
+          kubectl describe deployment --namespace kyverno
 
       - name: Show nodes status and wait for readiness
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
