--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -190,6 +190,7 @@ jobs:
           sudo apt-get install -y cri-o kubelet kubeadm kubectl
           
           sudo cp ci/cached-builds/crio.conf /etc/crio/crio.conf.d/
+          sudo rm -rf /etc/cni/net.d/11-crio-ipv4-bridge.conflist
           
           sudo systemctl start crio.service
         env:
