--- a/ci/cached-builds/crio.conf
+++ b/ci/cached-builds/crio.conf
@@ -10,4 +10,4 @@ runroot = "home/runner/.local/share/containers/runstorage"
 # the /etc/cni/net.d/11-crio-ipv4-bridge.conflist default IPs confilct with flannel,
 # older versions of kubernetes the kubelet was touching the cni, now only the container runtime touches
 # c.f. https://kubernetes.io/docs/concepts/extend-kubernetes/compute-storage-net/network-plugins/#installation
-network_dir = "/etc/cni/net.d-kube/"
+#network_dir = "/etc/cni/net.d-kube/"
