no custom storage options

--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -5,6 +5,6 @@ driver="overlay"
 
 [storage.options]
 # https://www.redhat.com/sysadmin/faster-container-image-pulls
-pull_options = {enable_partial_images = "true", use_hard_links = "false", ostree_repos=""}
+#pull_options = {enable_partial_images = "true", use_hard_links = "false", ostree_repos=""}
 
 [storage.options.overlay]
