--- a/ci/cached-builds/containers.conf
+++ b/ci/cached-builds/containers.conf
@@ -6,8 +6,8 @@
 # needed for reliability
 retry=100
 # supposedly these images are faster to pull
-compression_format="zstd:chunked"
-compression_level=6
+#compression_format="zstd:chunked"
+#compression_level=6
 # defaults to /var/tmp, which is small
 image_copy_tmp_dir="storage"
 
