--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -136,17 +136,17 @@ jobs:
           
           echo "IMAGE_TAG=${IMAGE_TAG}" >> "$GITHUB_OUTPUT"
 
-      # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
-      - name: "push|schedule: make ${{ inputs.target }}"
-        run: |
-          
-          make ${{ inputs.target }}
-        if: ${{ fromJson(inputs.github).event_name == 'push' || fromJson(inputs.github).event_name == 'schedule' }}
-        env:
-          IMAGE_TAG: "${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
-          CONTAINER_BUILD_CACHE_ARGS: "--cache-from ${{ env.CACHE }} --cache-to ${{ env.CACHE }}"
-          # dependent images were already built and pushed, so just let podman pull it
-          BUILD_DEPENDENT_IMAGES: "no"
+#      # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
+#      - name: "push|schedule: make ${{ inputs.target }}"
+#        run: |
+#
+#          make ${{ inputs.target }}
+#        if: ${{ fromJson(inputs.github).event_name == 'push' || fromJson(inputs.github).event_name == 'schedule' }}
+#        env:
+#          IMAGE_TAG: "${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
+#          CONTAINER_BUILD_CACHE_ARGS: "--cache-from ${{ env.CACHE }} --cache-to ${{ env.CACHE }}"
+#          # dependent images were already built and pushed, so just let podman pull it
+#          BUILD_DEPENDENT_IMAGES: "no"
 
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#pull_request
       - name: "pull_request: make ${{ inputs.target }}"
