--- a/ci/cached-builds/crio.conf
+++ b/ci/cached-builds/crio.conf
@@ -3,7 +3,8 @@
 [crio]
 # reuse podman's container storage because we have huge images that don't fit on disk twice
 root = "/home/runner/.local/share/containers/storage"
-runroot = "home/runner/.local/share/containers/runstorage"
+# has to be the same as root!
+runroot = "/home/runner/.local/share/containers/storage"
 
 # https://stackoverflow.com/questions/62408028/kubelet-failed-to-createpodsandbox-for-coredns-failed-to-set-bridge-addr-c
 [crio.network]
