use fuse-overlayfs

--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -1,7 +1,12 @@
 # https://github.com/containers/storage/blob/main/docs/containers-storage.conf.5.md
 
+# Multiple users sharing the same containers/storage is not "supported" as it tends to cause
+# various permission issues on the host or wrong uid/gids in the containers. C.f.
+#  https://access.redhat.com/solutions/6986565
 [storage]
-driver="overlay"
+driver = "fuse-overlayfs"
+# We can use fuse-overlayfs to avoid the uid/gid-shift problems, and then reuse by root user works.
+mount-program = "/usr/bin/fuse-overlayfs"
 
 [storage.options]
 # https://www.redhat.com/sysadmin/faster-container-image-pulls
