--- a/ci/cached-builds/crio.conf
+++ b/ci/cached-builds/crio.conf
@@ -1,6 +1,10 @@
 # https://github.com/cri-o/cri-o/blob/main/docs/crio.conf.5.md
 
 [crio]
+storage_driver = "overlay"
+storage_option = [ "mount_program=/usr/bin/fuse-overlayfs" ]
+# storage_option = [ "overlay.mountopt=nodev,metacopy=on" ]
+
 # reuse podman's container storage because we have huge images that don't fit on disk twice
 root = "/home/runner/.local/share/containers/storage"
 # has to be the same as root!
