--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -4,7 +4,7 @@
 # various permission issues on the host or wrong uid/gids in the containers. C.f.
 #  https://access.redhat.com/solutions/6986565
 [storage]
-driver = "fuse-overlayfs"
+driver = "overlay"
 # We can use fuse-overlayfs to avoid the uid/gid-shift problems, and then reuse by root user works.
 mount-program = "/usr/bin/fuse-overlayfs"
 
