--- a/ci/cached-builds/crio.conf
+++ b/ci/cached-builds/crio.conf
@@ -2,7 +2,7 @@
 
 [crio]
 storage_driver = "overlay"
-storage_option = [ "mount_program=/usr/bin/fuse-overlayfs" ]
+storage_option = [ "overlay.mount_program=/usr/bin/fuse-overlayfs" ]
 # storage_option = [ "overlay.mountopt=nodev,metacopy=on" ]
 
 # reuse podman's container storage because we have huge images that don't fit on disk twice
