--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -5,6 +5,9 @@
 #  https://access.redhat.com/solutions/6986565
 [storage]
 driver = "overlay"
+graphroot="/home/runner/.local/share/containers/storage"
+runroot = "/home/runner/.local/share/containers/storage"
+transient_store = "true"
 
 [storage.options]
 # https://www.redhat.com/sysadmin/faster-container-image-pulls
@@ -13,3 +16,4 @@ driver = "overlay"
 [storage.options.overlay]
 # We can use fuse-overlayfs to avoid the uid/gid-shift problems, and then reuse by root user works.
 mount-program = "/usr/bin/fuse-overlayfs"
+force_mask = "0700"
