Failed to obtain podman configuration: toml: line 10 (last key "storage.transient_store"): incompatible types: TOML value has type string; destination has type boolean

--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -7,7 +7,7 @@
 driver = "overlay"
 graphroot="/home/runner/.local/share/containers/storage"
 runroot = "/home/runner/.local/share/containers/storage"
-transient_store = "true"
+transient_store = true
 
 [storage.options]
 # https://www.redhat.com/sysadmin/faster-container-image-pulls
