mount underscore program

--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -15,5 +15,5 @@ transient_store = true
 
 [storage.options.overlay]
 # We can use fuse-overlayfs to avoid the uid/gid-shift problems, and then reuse by root user works.
-mount-program = "/usr/bin/fuse-overlayfs"
+mount_program = "/usr/bin/fuse-overlayfs"
 force_mask = "0700"
